--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="nav">
         <!-- view final score to left corner -->
         <div class="left corner">
-            <h5>View Highscore</h5>
+         <onclick="viewScore()><h5>View Highscore <span id="yourScore">0</span></h5></onclick>
             <!-- countdown timer -->
         <div class="right corner">
             <h5>Time: <span id="timeLeft">0</span></h5>
